// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMode: always block: center, inline: center 1`] = `
{
  "left": 1250,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: end 1`] = `
{
  "left": 900,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: nearest 1`] = `
{
  "left": 900,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: nearest 2`] = `
{
  "left": 1600,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: start 1`] = `
{
  "left": 1600,
  "top": 950,
}
`;

exports[`scrollMode: always block: end, inline: center 1`] = `
{
  "left": 1250,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: end 1`] = `
{
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: nearest 1`] = `
{
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: nearest 2`] = `
{
  "left": 1600,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: start 1`] = `
{
  "left": 1600,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: center 1`] = `
{
  "left": 1250,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: center 2`] = `
{
  "left": 1250,
  "top": 1200,
}
`;

exports[`scrollMode: always block: nearest, inline: end 1`] = `
{
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: end 2`] = `
{
  "left": 900,
  "top": 1200,
}
`;

exports[`scrollMode: always block: nearest, inline: nearest 1`] = `
{
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: nearest 2`] = `
{
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: always block: nearest, inline: start 1`] = `
{
  "left": 1600,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: start 2`] = `
{
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: center 1`] = `
{
  "left": 1250,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: end 1`] = `
{
  "left": 900,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: nearest 1`] = `
{
  "left": 900,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: nearest 2`] = `
{
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: start 1`] = `
{
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: if-needed horizontal completely overflowing 1`] = `
[
  {
    "el": "html",
    "left": 900,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed horizontal fully negative overflowing 1`] = `
[
  {
    "el": "html",
    "left": 1600,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed horizontal partially negative overflowing 1`] = `
[
  {
    "el": "html",
    "left": 1600,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed horizontal partially overflowing 1`] = `
[
  {
    "el": "html",
    "left": 900,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed vertical completely above the fold 1`] = `
[
  {
    "el": "html",
    "left": 1200,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed vertical completely below the fold 1`] = `
[
  {
    "el": "html",
    "left": 1200,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed vertical partially above the fold 1`] = `
[
  {
    "el": "html",
    "left": 1200,
    "top": 950,
  },
]
`;

exports[`scrollMode: if-needed vertical partially below the fold 1`] = `
[
  {
    "el": "html",
    "left": 1200,
    "top": 950,
  },
]
`;
